# cram_popcorn_demo

./: LICENSE  README.md
designator_library/: CMakeLists.txt  designator-library.asd  package.xml
designator_library/lisp/: action-designators.lisp  boxy-robot-designator.lisp  boxy-robot-frames.lisp  designator-utilities.lisp  package.lisp  pr2-robot-designator.lisp  pr2-robot-frames.lisp
designator_utilities/: CMakeLists.txt  package.xml
kitchen_context/: CMakeLists.txt  README.md  kitchen-context.asd  package.xml
kitchen_context/config/: kitchen_context_visualization.rviz
kitchen_context/launch/: kitchen_context.launch  kitchen_context_simulation.launch  knowrob.launch  move_pr2_base_into_initial_pose.launch  move_pr2_torso_into_initial_position.launch  pr2_localization.launch  upload_models_on_rosparam_server.launch
kitchen_context/lisp/: action-designators.lisp  cheese-frames.lisp  deep-plate-frames.lisp  dispensing-frames.lisp  green-bowl-frames.lisp  kitchen-context-frames.lisp  kitchen-island-frames.lisp  knowrob-interface.lisp  lid-frames.lisp  location-designators.lisp  object-designators.lisp  package.lisp  pizza-frames.lisp  pot-frames.lisp  red-bowl-frames.lisp  salt-cellar-frames.lisp  scooping-frames.lisp  small-bowl-frames.lisp  spoon-flatten-frames.lisp  spoon-rounded-frames.lisp  spreading-frames.lisp  stove-table-drawer-left-frames.lisp  stove-table-drawer-right-frames.lisp  stove-table-frames.lisp  tomato-sauce-frames.lisp  tool-holder-frames.lisp  tray-frames.lisp  yellow-bowl-frames.lisp
kitchen_context/maps/: chemlab_map.xcf  kitchen_map.pgm  kitchen_map.yaml  popcorn_map.pgm  popcorn_map.yaml
kitchen_context/models/chemlab_walls/: chemlab_walls.sdf  model.config
kitchen_context/models/deep_plate/: deep_plate.sdf  deep_plate.urdf  model.config
kitchen_context/models/deep_plate/meshes/: deep_plate.dae
kitchen_context/models/lid/: lid.sdf  lid.urdf  model.config
kitchen_context/models/lid/meshes/: lid.dae
kitchen_context/models/pot/: model.config  pot.sdf  pot.urdf
kitchen_context/models/pot/meshes/: pot.dae
kitchen_context/models/pr2_description/: model.config
kitchen_context/models/salt_cellar/: model.config  salt_cellar.sdf  salt_cellar.urdf
kitchen_context/models/salt_cellar/meshes/: salt_cellar.dae
kitchen_context/models/small_bowl/: model.config  small_bowl.sdf  small_bowl.urdf
kitchen_context/models/small_bowl/meshes/: small_bowl.dae
kitchen_context/models/stove_table/: model.config  stove_table.sdf  stove_table.urdf  stove_table_drawer_left.urdf  stove_table_drawer_right.urdf
kitchen_context/models/stove_table/meshes/: stove_drawer.dae  stove_table.dae
kitchen_context/owl/: stove_table_semantic_map.owl  stove_table_workspace.owl
kitchen_context/prolog/: init.pl
kitchen_context/worlds/: stove_table.world
kitchen_knowledge/: CMakeLists.txt  README.md  kitchen-knowledge.asd  package.xml
kitchen_knowledge/src/: kitchen-cook-knowledge.lisp  kitchen-objects-knowledge.lisp  kitchen-serv-knowledge.lisp  package.lisp  perform-action-kitchen.lisp
plan_library/: CMakeLists.txt  mainpage.dox  package.xml  plan-library.asd
plan_library/lisp/: constraint-controller-ros-interface.lisp  dual-arm-manipulation-plans.lisp  dual-gripper-gripping-plans.lisp  dual-gripper-gripping-ros-interface.lisp  grasp-object-dual-arm-plans.lisp  grasp-object-single-arm-plans.lisp  inverse-kinematics-ros-interface.lisp  manipulation-plans.lisp  move-object-plans.lisp  navigation-plans.lisp  navigation-ros-interface.lisp  package-interface.lisp  perception-plans.lisp  perception-ros-interface.lisp  sighting-plans.lisp  sighting-ros-interface.lisp  singular-arm-manipulation-plans.lisp  singular-gripper-gripping-plans.lisp  singular-gripper-gripping-ros-interface.lisp  torso-plans.lisp  torso-ros-interface.lisp  ungrasp-object-dual-arm-plans.lisp  ungrasp-object-single-arm-plans.lisp  vision-plans.lisp  vision-ros-interface.lisp
popcorn_demo/: CMakeLists.txt  README.md  README.md~  package.xml  popcorn-demo.asd  popcorn-steps.md
popcorn_demo/lisp/: configuration.lisp
popcorn_demo/lisp/popcorn_plans/: first-part-popcorn-demo.lisp  popcorn-demo.lisp  second-part-popcorn-demo.lisp
popcorn_demo/lisp/testing_plans/: #test-move-object-plans.lisp#  navigate.lisp  package.lisp  point-head.lisp  test-abstract-plans.lisp  testing-dual-grasping-pot.lisp  testing-right-drawer-grasping.lisp
popcorn_perception/: CMakeLists.txt  README.md  package.xml
popcorn_perception/action/: Perceive.action
popcorn_perception/include/popcorn_perception/: CPerceiveActionServer.h  Geometry.h  Kinect.h  ObjectLocalizer.h
popcorn_perception/launch/: perceive_action_server.launch
popcorn_perception/src/: CPerceiveActionServer.cpp  Geometry.cpp  Kinect.cpp  Main.cpp  ObjectLocalizer.cpp
pr2_ik_infrastructure/arm_navigation_msgs/: CMakeLists.txt  package.xml
pr2_ik_infrastructure/kinematics_msgs/: CMakeLists.txt  package.xml
pr2_ik_infrastructure/pr2_arm_kinematics/: CMakeLists.txt  package.xml
pr2_ik_infrastructure/pr2_arm_kinematics/include/pr2_arm_kinematics/: pr2_arm_kinematics_plugin.h
pr2_ik_infrastructure/two_hand_ik_trajectory_executor/: CMakeLists.txt  package.xml
pr2_ik_infrastructure/two_hand_ik_trajectory_executor/launch/: ik_trajectory_executor.launch
pr2_ik_infrastructure/two_hand_ik_trajectory_executor/src/: ik_trajectory_executor.cpp
pr2_ik_infrastructure/two_hand_ik_trajectory_executor/srv/: ExecuteBothArmsCartesianIKTrajectory.srv
tf_utilities/: CMakeLists.txt  package.xml  tf-utilities.asd
tf_utilities/lisp/: #object-designator-utilities.lisp#  action-designator-utilities.lisp  fake-robosherlock.lisp  location-designator-utilities.lisp  object-designator-utilities.lisp  package.lisp  pr2-arm-utilities.lisp  tf2-utilities.lisp
