<?xml version="1.0"?>
<package>
  <name>kitchen_context</name>
  <version>0.0.0</version>
  <description>The kitchen_context package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="lisca@cs.uni-bremen.de">Gheorghe Lisca</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/kitchen_context</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="mihaela.popescu94@gmail.com">Mihaela Popescu</author>
  <author email="erdodiboglar@gmail.com">Boglárka Erdődi</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>iai_maps</build_depend>
  <build_depend>iai_kitchen</build_depend>
  <build_depend>iai_naive_kinematics_sim</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>                                                                
  <build_depend>geometry_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>std_srvs</build_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>moveit_core</build_depend>
  <!--build_depend>moveit_ros_planning_interface</build_depend-->
  <build_depend>roslisp_utilities</build_depend>
  <build_depend>actionlib_lisp</build_depend>
  <build_depend>cl_tf2</build_depend>
  <build_depend>cram_moveit</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>cram_language</build_depend> 
  <build_depend>cram_process_modules</build_depend>
  <!--build_depend>cram_prolog</build_depend-->
  <build_depend>cram_json_prolog</build_depend>
  <!--build_depend>plan_library</build_depend-->
  <!--build_depend>nextage_bosch_workspace_simulation</build_depend-->

 
  <run_depend>message_runtime</run_depend>
  <run_depend>iai_maps</run_depend>
  <run_depend>iai_kitchen</run_depend>
  <run_depend>iai_naive_kinematics_sim</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>                                                                   
  <run_depend>geometry_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>std_srvs</run_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>moveit_core</run_depend>
  <!--run_depend>moveit_ros_planning_interface</run_depend-->
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>actionlib_lisp</run_depend>
  <run_depend>cl_tf2</run_depend>
  <run_depend>cram_moveit</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>cram_language</run_depend> 
  <run_depend>cram_process_modules</run_depend>
  <!--run_depend>cram_prolog</run_depend-->
  <run_depend>cram_json_prolog</run_depend>
  <!--run_depend>plan_library</run_depend-->
  <!--run_depend>nextage_bosch_workspace_simulation</run_depend-->

 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
