<package>

  <name> arm_navigation_msgs </name>
  <version> 0.0.1 </version>
  <description> arm_navigation_msgs </description>
  <maintainer email="unknown@unknown.com">Gil </maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/arm_navigation_msgs</url>
  <author>Gil Jones</author>

  <buildtool_depend> catkin </buildtool_depend>

  <build_depend> message_generation </build_depend>

  <build_depend> actionlib_msgs </build_depend>
  <build_depend> std_msgs </build_depend>
  <build_depend> geometry_msgs </build_depend>
  <build_depend> sensor_msgs </build_depend>
  <build_depend> trajectory_msgs </build_depend>
  <build_depend> tf </build_depend>

  <run_depend> message_runtime </run_depend>

  <run_depend> actionlib_msgs </run_depend>
  <run_depend> std_msgs </run_depend>
  <run_depend> geometry_msgs </run_depend>
  <run_depend> sensor_msgs </run_depend>
  <run_depend> trajectory_msgs </run_depend>
  <run_depend> tf </run_depend>

</package>
