<package>
  <name> kinematics_msgs </name>
  <version> 0.0.1 </version>
  <description>
    This package provides general-purpose messages and services that can be used for kinematic computation using a ROS interface.
  </description>
  <maintainer email="unknown@unknown.com"> Jil </maintainer>
  <license>BSD</license>
 
  <url>http://ros.org/wiki/kinematics_msgs</url>
  <author>Sachin Chitta</author>

  <buildtool_depend> catkin </buildtool_depend>

  <build_depend> message_generation </build_depend>

  <build_depend> geometry_msgs </build_depend>
  <build_depend> trajectory_msgs </build_depend>
  <build_depend> arm_navigation_msgs </build_depend>

  <run_depend> message_runtime </run_depend>

  <run_depend> geometry_msgs </run_depend>
  <run_depend> trajectory_msgs </run_depend>
  <run_depend> arm_navigation_msgs </run_depend>

</package>
